--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/my_library?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 server.port=8080
-
+server.address=192.168.1.68
+spring.data.rest.default-page-size=10
 # you can add it to program arguments: --spring.datasource.password=*****
 # spring.datasource.password=*****
