--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.username=root
 server.port=8080
 server.address=192.168.1.68
 spring.data.rest.default-page-size=10
+
+images.path=/home/keygenqt/dump_images
+
 # you can add it to program arguments: --spring.datasource.password=*****
 # spring.datasource.password=*****
