add images.dir & images.url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8080
 server.address=192.168.1.68
 spring.data.rest.default-page-size=10
 
-images.path=/home/keygenqt/dump_images
+images.dir=/home/keygenqt/dump_images
+images.url=https://api.mylibraryapp.com/images
 
 # you can add it to program arguments: --spring.datasource.password=*****
 # spring.datasource.password=*****
