--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/my_library?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-server.port=8080
-server.address=192.168.1.68
-spring.data.rest.default-page-size=10
+spring.datasource.username=username
+spring.datasource.password=password
 
+spring.data.rest.default-page-size=10
 images.dir=/home/keygenqt/dump_images
 images.url=https://api.mylibraryapp.com/images
 
